--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ span {
 
 section {
     display: flex;
+    margin-bottom: 100px;
 }
 
 .half-width {
@@ -32,7 +33,13 @@ section {
     border-radius: 6px;
 }
 
-.topbanner {
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
